# sail-vs-spark-udf-benchmark

./: .gitignore  DOCUMENTATION.md  Makefile  README.md  dashboard.py  generate_benchmarks_2.py  pyproject.toml  requirements.txt
analysis/: __init__.py  aggregate_results.py  plot_depth_runtime.py  plot_disk_io.py  plot_gpu_timeline.py  plot_memory.py  plot_overhead_breakdown.py  plot_serialization.py  plot_speedup.py
config/: cpu.yaml  cpu_real.yaml  gpu_h200.yaml  gpu_v100_smoke.yaml  laptop.yaml  mock.yaml  qwen3_chat_template.jinja
data/laptop/: prompts.parquet  prompts_meta.json
explorer/: README.md  debug_download_conv1d.sh  prep_download.sh  prep_install.sh  submit_cpu.sh  submit_gpu.sh  submit_gpu_smoke.sh  sync.sh
notebooks/: sail_arrow_ai_inference.py  sail_arrow_ai_inference_colab.py
results/laptop/: aggregate.csv  aggregate.json  aggregate.md  live_w0_A_d2_manifest.json  live_w0_A_d2_stats.json  live_w1_B_manifest.json  live_w1_B_stats.json  live_w3_A_manifest.json  live_w3_A_stats.json  (+6 more)
scripts/: check_cuda_health.py  download_models.py  prep_dataset.py  repro_tz_ltz_bug.py  run_all_gpu.sh  run_all_laptop.sh  run_benchmark.sh  setup_env.sh  slurm_benchmark_all.sh  start_vllm_server.sh
slurm/: README.md  prep_download.sh  prep_install.sh  submit_cpu.sh  submit_cpu_real_models.sh  submit_gpu.sh  submit_gpu_smoke.sh
tests/: test_aggregate_results.py  test_benchmark_modes.py  test_boundary_timer.py  test_cli.py  test_configs.py  test_dataset.py  test_execution_common.py  test_metrics_collector.py  test_mock_model.py  test_workloads.py
(+53 files in other folders)
